--- a/resources/dam2/test/test/TranspoTravel.fxml
+++ b/resources/dam2/test/test/TranspoTravel.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -13,29 +13,28 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="dam2.projecte.transpotravel.OfertesController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #34495E;" stylesheets="@prova.css" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="dam2.projecte.transpotravel.TranspotravelController">
    <children>
       <Text layoutX="223.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TranspoTravel">
          <font>
             <Font size="25.0" />
          </font></Text>
-      <TabPane layoutY="57.0" prefHeight="345.0" prefWidth="600.0" style="-fx-background-color: white; -fx-border-color: white;" tabClosingPolicy="UNAVAILABLE">
+      <TabPane layoutY="57.0" prefHeight="345.0" prefWidth="600.0" style="-fx-background-color: #34495E;" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab style="-fx-background-color: white;" text="Ofertes">
+          <Tab style="-fx-background-color: #34495E;" text="Ofertes">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="394.0" prefWidth="765.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="394.0" prefWidth="765.0" style="-fx-background-color: #154360;">
                      <children>
-                        <TableView layoutX="-3.0" layoutY="-8.0" prefHeight="325.0" prefWidth="606.0" style="-fx-background-color: white;">
+                        <TableView fx:id="OfertesimatgeiDescripcio" layoutX="-3.0" layoutY="-8.0" prefHeight="325.0" prefWidth="606.0" style="-fx-background-color: #34495E;">
                           <columns>
-                            <TableColumn prefWidth="294.4000244140625" style="-fx-background-color: white; -fx-border-style: white;" text="Imatge" />
-                            <TableColumn prefWidth="311.20001220703125" style="-fx-background-color: white;" text="Descripció" />
+                            <TableColumn fx:id="imatgeOfertes" prefWidth="600.0" style="-fx-background-color: #34495E;" />
                           </columns>
                         </TableView>
                      </children>
                   </AnchorPane>
             </content>
           </Tab>
-          <Tab style="-fx-background-color: white;" text="Viatges">
+          <Tab style="-fx-background-color: #34495E;" text="Viatges">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -54,21 +53,21 @@
                               <Font size="15.0" />
                            </font>
                         </Text>
-                        <Spinner layoutX="42.0" layoutY="66.0" />
-                        <Spinner layoutX="408.0" layoutY="66.0" />
-                        <TableView layoutX="-4.0" layoutY="103.0" prefHeight="213.0" prefWidth="606.0">
+                        <TableView fx:id="ViatgesTaulaVols" layoutX="-4.0" layoutY="103.0" prefHeight="213.0" prefWidth="606.0">
                           <columns>
-                            <TableColumn prefWidth="112.00006103515625" text="Vols" />
-                            <TableColumn prefWidth="111.2000732421875" text="Preu" />
-                              <TableColumn prefWidth="142.40008544921875" text="Punts de recollida" />
-                              <TableColumn prefWidth="119.99993896484375" text="Hora de sortida" />
-                              <TableColumn prefWidth="121.5999755859375" text="Hora d'arribada" />
+                            <TableColumn fx:id="volsViatge" prefWidth="112.00006103515625" text="Vols" />
+                            <TableColumn fx:id="PreuViatge" prefWidth="111.2000732421875" text="Preu" />
+                              <TableColumn fx:id="PuntRecollidaViatge" prefWidth="142.40008544921875" text="Punts de recollida" />
+                              <TableColumn fx:id="HoraSortidaViatge" prefWidth="119.99993896484375" text="Hora de sortida" />
+                              <TableColumn fx:id="HoraArribadaViatge" prefWidth="121.5999755859375" text="Hora d'arribada" />
                           </columns>
                         </TableView>
+                        <ComboBox fx:id="ViatgeComboBoxOrigen" layoutX="42.0" layoutY="66.0" prefWidth="150.0" />
+                        <ComboBox fx:id="ViatgeComboBoxDesti" layoutX="408.0" layoutY="66.0" prefWidth="150.0" />
                      </children></AnchorPane>
             </content>
           </Tab>
-            <Tab style="-fx-background-color: white;" text="Seguiment">
+            <Tab style="-fx-background-color: #34495E;" text="Seguiment">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -76,15 +75,16 @@
                           <tabs>
                             <Tab text="Seguiment Equipatge">
                               <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #708090;">
                                        <children>
-                                          <TextField layoutX="211.0" layoutY="14.0" prefHeight="26.0" prefWidth="166.0" promptText="Introdueix l'Id de Equipatge" />
-                                          <Button layoutX="407.0" layoutY="14.0" mnemonicParsing="false" text="Buscar" />
-                                          <TableView layoutX="2.0" layoutY="53.0" prefHeight="240.0" prefWidth="600.0">
+                                          <TextField fx:id="textfieldidEquipatge" layoutX="211.0" layoutY="14.0" prefHeight="26.0" prefWidth="166.0" promptText="Introdueix l'Id de Equipatge" />
+                                          <Button fx:id="BuscarEquipatge" layoutX="407.0" layoutY="14.0" mnemonicParsing="false" onAction="#onClickBuscarEquipatge" text="Buscar" />
+                                          <TableView fx:id="SeguimentEquipatge" layoutX="2.0" layoutY="53.0" prefHeight="240.0" prefWidth="600.0">
                                             <columns>
-                                              <TableColumn prefWidth="197.60003662109375" text="Origen" />
-                                              <TableColumn prefWidth="184.79998779296875" text="Desti" />
-                                                <TableColumn prefWidth="217.60009765625" text="Estat" />
+                                                <TableColumn fx:id="puntRecollidaSeguimentVol" prefWidth="184.00000619888306" text="Punt de Recollida" />
+                                              <TableColumn fx:id="origenEquipatge" prefWidth="156.0" text="Origen" />
+                                              <TableColumn fx:id="DestiEquipatge" prefWidth="126.4000244140625" text="Desti" />
+                                                <TableColumn fx:id="EstatEquipatge" prefWidth="131.19998168945312" text="Estat" />
                                             </columns>
                                           </TableView>
                                        </children>
@@ -93,16 +93,15 @@
                             </Tab>
                             <Tab text="Seguiment Vol">
                               <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #708090;">
                                        <children>
-                                          <TextField layoutX="227.0" layoutY="14.0" promptText="Introdueix l'Id del Vol" />
-                                          <Button layoutX="407.0" layoutY="14.0" mnemonicParsing="false" text="Buscar" />
-                                          <TableView layoutX="-1.0" layoutY="54.0" prefHeight="240.0" prefWidth="608.0">
+                                          <TextField fx:id="idSeguimentVol" layoutX="227.0" layoutY="14.0" promptText="Introdueix l'Id del Vol" />
+                                          <Button fx:id="BuscarVol" layoutX="407.0" layoutY="14.0" mnemonicParsing="false" onAction="#onClickBuscarVol" text="Buscar" />
+                                          <TableView fx:id="SeguimentVol" layoutX="-1.0" layoutY="54.0" prefHeight="240.0" prefWidth="608.0">
                                             <columns>
-                                              <TableColumn prefWidth="131.20001220703125" text="Punt de Recollida" />
-                                              <TableColumn prefWidth="110.4000244140625" text="Origen" />
-                                                <TableColumn prefWidth="124.79998779296875" text="Desti" />
-                                                <TableColumn prefWidth="236.79998779296875" text="Estat" />
+                                              <TableColumn fx:id="OrigenSeguimentVol" prefWidth="196.00000619888306" text="Origen" />
+                                                <TableColumn fx:id="DestiSeguimentVol" prefWidth="217.5999755859375" text="Desti" />
+                                                <TableColumn fx:id="EstatSeguimentVol" prefWidth="192.79995727539062" text="Estat" />
                                             </columns>
                                           </TableView>
                                        </children>
@@ -114,7 +113,7 @@
                      </children></AnchorPane>
                </content>
             </Tab>
-            <Tab style="-fx-background-color: white;" text="Contacte">
+            <Tab style="-fx-background-color: #34495E;" text="Contacte">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -138,8 +137,8 @@
                               <Font size="20.0" />
                            </font>
                         </Text>
-                        <TextArea layoutX="43.0" layoutY="176.0" prefHeight="125.0" prefWidth="480.0" />
-                        <Button layoutX="533.0" layoutY="226.0" mnemonicParsing="false" text="Enviar" />
+                        <TextArea fx:id="TextAreaContacte" layoutX="43.0" layoutY="176.0" prefHeight="125.0" prefWidth="480.0" />
+                        <Button fx:id="EnviarDadesContacte" layoutX="533.0" layoutY="226.0" mnemonicParsing="false" text="Enviar" />
                         <Text layoutX="391.0" layoutY="75.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Responsables:">
                            <font>
                               <Font size="20.0" />
